// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AWS Error Object 1`] = `
Object {
  "err": Object {
    "message": "Ded 3",
    "name": "Error",
    "stack": "Error: Ded 3
    at Object.<anonymous> (/srv/test/__tests__/aws.test.ts:32:18)
    at Promise.then.completed (/srv/test/node_modules/jest-circus/build/utils.js:390:28)
    at new Promise (<anonymous>)
    at callAsyncCircusFn (/srv/test/node_modules/jest-circus/build/utils.js:315:10)
    at _callCircusTest (/srv/test/node_modules/jest-circus/build/run.js:218:40)
    at _runTest (/srv/test/node_modules/jest-circus/build/run.js:155:3)
    at _runTestsForDescribeBlock (/srv/test/node_modules/jest-circus/build/run.js:66:9)
    at _runTestsForDescribeBlock (/srv/test/node_modules/jest-circus/build/run.js:60:9)
    at run (/srv/test/node_modules/jest-circus/build/run.js:25:3)
    at runAndTransformResultsToJestFormat (/srv/test/node_modules/jest-circus/build/legacy-code-todo-rewrite/jestAdapterInit.js:166:21)
    at jestAdapter (/srv/test/node_modules/jest-circus/build/legacy-code-todo-rewrite/jestAdapter.js:82:19)
    at runTestInternal (/srv/test/node_modules/jest-runner/build/runTest.js:389:16)
    at runTest (/srv/test/node_modules/jest-runner/build/runTest.js:481:34)",
  },
  "hostname": "testhost",
  "level": 50,
  "msg": "Ded 3",
  "pid": 1337,
  "time": 1234567890000,
}
`;

exports[`AWS Lambda Error Object 1`] = `
Object {
  "err": Object {
    "message": "Ded 4",
    "name": "Error",
    "stack": "Error: Ded 4
    at Object.<anonymous> (/srv/test/__tests__/aws.test.ts:23:18)
    at Promise.then.completed (/srv/test/node_modules/jest-circus/build/utils.js:390:28)
    at new Promise (<anonymous>)
    at callAsyncCircusFn (/srv/test/node_modules/jest-circus/build/utils.js:315:10)
    at _callCircusTest (/srv/test/node_modules/jest-circus/build/run.js:218:40)
    at _runTest (/srv/test/node_modules/jest-circus/build/run.js:155:3)
    at _runTestsForDescribeBlock (/srv/test/node_modules/jest-circus/build/run.js:66:9)
    at _runTestsForDescribeBlock (/srv/test/node_modules/jest-circus/build/run.js:60:9)
    at run (/srv/test/node_modules/jest-circus/build/run.js:25:3)
    at runAndTransformResultsToJestFormat (/srv/test/node_modules/jest-circus/build/legacy-code-todo-rewrite/jestAdapterInit.js:166:21)
    at jestAdapter (/srv/test/node_modules/jest-circus/build/legacy-code-todo-rewrite/jestAdapter.js:82:19)
    at runTestInternal (/srv/test/node_modules/jest-runner/build/runTest.js:389:16)
    at runTest (/srv/test/node_modules/jest-runner/build/runTest.js:481:34)",
  },
  "hostname": "testhost",
  "level": 50,
  "msg": "Ded 4",
  "pid": 1337,
  "time": 1234567890000,
}
`;

exports[`AWS Lambda Logger + contextId 1`] = `
Object {
  "_context": Object {
    "stuff": true,
  },
  "_contextId": "testContextId",
  "hostname": "testhost",
  "level": 40,
  "msg": "hello",
  "pid": 1337,
  "time": 1234567890000,
}
`;
